Remove broken link from WebGL infobar.

BUG=670260

Review-Url: https://codereview.chromium.org/2550553002
Cr-Commit-Position: refs/heads/master@{#435809}

Former-commit-id: 5ef88c2b2a02f25c822c01bf546784d0b6a03abd